Fixed the layout issue. Now I gotta fix the hover border-radius issue.

--- a/projects/00-hello-world/src/components/FollowSuggestion.css
+++ b/projects/00-hello-world/src/components/FollowSuggestion.css
@@ -1,23 +1,25 @@
 .suggestion-body {
+  position: relative;
   padding: 10px 13px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 3.25fr 1.5fr;
 }
 
 .suggestion-body:hover {
   background-color: rgb(54, 54, 54);
-  border-radius: 0 0 10px 10px;
+  /* border-radius: 0 0 10px 10px; */
 }
 
 .avatar {
   width: 50px;
   border-radius: 50%;
-  margin-right: 10px;
 }
 
 .user-info {
-  margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 10px;
 }
 
 .user-name:hover {
@@ -30,7 +32,15 @@
   color: rgb(140, 140, 140);
 }
 
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .suggestion-button {
+  position: absolute;
+  right: 13px;
   border: none;
   outline: none;
   padding: 8px 13px;
